0.18.1
	update: initial SNMP support of Summit switches
	update: switch from deprecated ereg extension to PCRE (#262)
	update: don't use deprecated magic_quoes extension (#315)
0.18.0 2010-05-27
	new feature: Live CDP (#58)
	new feature: 802.1Q management (#182, original idea by Justin Ellison)
0.17.11
	update: usual SNMP updates
	update: Bulk port form (#321)
	bugfix: updateObject() saves DB records for dict values when not set. (#273)
	bugfix: argument validation was broken for value of 0 (#272)
	bugfix: "Add/update multiple ports" did not work (#326)
	bugfix: "bulk ports" form added more ports, than requested (#340)
0.17.10 2010-05-05
	update: make object form messages consistent (by Tyler J. Wagner)
	update: sort object ports in a more reasonable manner
	update: enable class methods as handlers (by James Tutton)
	update: better support of Huawei S5300 switches
	update: better support of Brocade/Foundry FastIron switches
	update: also list WS-C3524-XL (#320)
	update: better support of Nexus switches
	update: maintain filter per page load and isolated per realm (#217)
	bugfix: ldap cache timestamp fix (#332)
	bugfix: completely fix ticket:211
	bugfix: declare charset in HTTP header (#312)
	bugfix: PHP warning with certain auth setups (#310)
	bugfix: don't add AC-in port for switches, which don't have it (#316)
	bugfix: accept MAC addresses returned by newer Catalysts
	bugfix: IPv4 management page was sometimes broken (#309)
0.17.9 2010-02-17
	new feature: added per-user UI options (ticket:29)
	new feature: LDAP cache can be disabled now (ticket:247)
	bugfix: error message was lost on SNMP tab (reported by Tommi Hokkanen)
	bugfix: expand/collapse links on IPv4 tree view (ticket:308)
	bugfix: local.php did not work with SNMP
	bugfix: added error handling to gateway function (ticket:303)
	bugfix: user's local real name was ignored with LDAP (ticket:252)
	update: SNMP support for more Catalyst switches
0.17.8 2009-12-25